# cygwin-toy-scripts

./: README.md  build_ChinaDNS.sh  build_c-ares-1.12.0.sh  build_demo-gtk342-static.sh  build_eMail.sh  build_gcc484_gcc-4.8.4.sh  build_gcc484_gmp-5.1.3.sh  build_gcc484_mpc-1.0.1.sh  build_gcc484_mpfr-3.1.2.sh  build_gtk-test.sh  build_httptunnel-3.0.5.sh  build_jansson-2.9-cygwin.sh  build_jansson-2.9-mingw.sh  build_jshon-mingw.sh  build_lcx.sh  build_libev-4.24.sh  build_libpcre-8.39.sh  build_libsodium-1.0.9.sh  build_masscan-1.0-3-mingw.sh  build_mosquitto-static-test.sh  build_mosquitto.sh  build_openssl.sh  build_pingpong.sh  build_polipo.sh  build_shadowsocks-2.5.6.sh  build_socks5.sh  build_stunnel-5.38.sh  build_tgcd-1.1.1.sh  build_tinyproxy.sh  cygwin_init.sh  get_cygwinxp.sh  get_gcc-4.8.2-mingw.sh  get_gtk342-static.sh  get_gtk364.sh  http_proxy.conf
CygwinXP/: mirrors.lst
CygwinXP/cygwinxp.local/: README.txt
srcs/c-ares_cygport/: c-ares-1.12.0-1bl1.cygport
srcs/c-test/Interprocess-communication/: url.txt
srcs/c-test/多线程/: build_all.sh
srcs/demo-gtk342-static/: demo-gtk342-static.c
srcs/gtk-test_src/: autogen.sh  configure.ac
srcs/gtk-test_src/src/: Makefile.am  glade-test.c
srcs/libev_cygport/: libev-4.20-1bl1.cygport  libev-pc.patch
srcs/libpcre_cygport/: 8.39-cygwin-jit.patch  pcre.cygport
srcs/libpcre_cygport/fedora/: pcre-8.39-Fix-bad-interaction-between-o-and-M-in-pcregrep.patch  pcre.spec
srcs/libsodium_cygport/: libsodium-1.0.9-1bl1.cygport
srcs/masscan_build/: masscan-1.0.3-mingw.patch
srcs/mosquitto_cygport/: mosquitto-1.4.10-1bl1.cygport  mosquitto-1.4.10-1bl1.src.patch.temp
srcs/openssl_cygport/: 1.0.2-debuginfo.patch  openssl.cygport
srcs/socks5-src/: Makefile
(+38 files in other folders)
